--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 Hello World
-trouble shooting even further
-my name is Luvinia 
+
+my name is Luvinia Mo I am a sophomore at Lowell high school in San Francisco.
