--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <hx>Hello World</hx>
-my name is Luvinia Mo I am a sophomore at Lowell high school in San Francisco.
+I'm a rising sophomore at Lowell High School. Some of my interests include video editing and fashion. I like to spend my time catching up with old friends and exploring 90s fashion and films. I  I'm currently an intern at Each1Teach1 as well as in MYEEP.
