--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-<hx>About Me:</hx>
+<b>About Me:</b>
 
 My name is Luvinia Mo.
 
 I'm a rising sophomore at Lowell High School. Some of my interests are video editing and fashion. I like to spend my time catching up with old friends and exploring 90s runway and films. I hope to be a pharnacist in the future or have a career in the medical field. I was born in SF but lived in New York (2014-2018) before moving back to SF. I'm currently an intern at Each1Teach1 as well as in MYEEP.
+
