--- a/index.html
+++ b/index.html
@@ -22,13 +22,8 @@ export default function App() {
 const styles = StyleSheet.create({
   container: {
     flex: 1,
-    backgroundColor: '#fff',
+    backgroundColor: '##f4cccc',
     alignItems: 'center',
     justifyContent: 'center',
-  },
-});
-<Text>displays anything
-  return <Text></Text>
-</Text>
 
 
