--- a/index.html
+++ b/index.html
@@ -26,4 +26,6 @@ const styles = StyleSheet.create({
     alignItems: 'center',
     justifyContent: 'center',
 
-
+    <p align="center">
+        2.    // About Me
+        3.</p>
