--- a/index.html
+++ b/index.html
@@ -8,16 +8,6 @@ import { StatusBar } from 'expo-status-bar';
 import React from 'react';
 import { StyleSheet, Text, View, Button } from 'react-native';
 
-export default function App() {
-  return (
-    <View style={styles.container}>
-      <Text>welcome to my app</Text>
-      <Text>wassup</Text>
-      <Button title="Click Me" onPress ={function click (){alert("close")}} ></Button>
-      <StatusBar style="auto" />
-    </View>
-  );
-}
 
 const styles = StyleSheet.create({
   container: {
@@ -27,5 +17,5 @@ const styles = StyleSheet.create({
     justifyContent: 'center',
 
     <p align="center">
-        2.    // About Me
-        3.</p>
+       // About Me
+    </p>
