--- a/index.html
+++ b/index.html
@@ -19,3 +19,7 @@ const styles = StyleSheet.create({
     <p align="center">
        // About Me
     </p>
+
+    <p align="center">
+        // <b>About Me</b>
+    </p>
