--- a/index.html
+++ b/index.html
@@ -10,3 +10,5 @@ I'm a rising sophomore at Lowell High School. Some of my interests are video edi
 <p align="center">
     <img src="https://luviniamo.weebly.com/uploads/1/3/8/0/138042708/published/img-7713.jpg?1627609543" />
   </p>
+
+  <body style="background-color:grey;">
